--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "User": "User you want to use",
+    "User": "",
     "Initialisation" : 1,
-    "Pw": "password of your user",
-    "Database": "the database where you created tables"
+    "Pw": "",
+    "Database": ""
 }
