modification of config

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "User": "student_OC",
+    "User": "",
     "Initialisation" : 1,
-    "Pw": "Geof4589",
-    "Database": "projet_5"
+    "Pw": "",
+    "Database": ""
 }
