--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "User": "",
-    "Initialisation" : 1,
-    "Pw": "",
-    "Database": ""
+    "User": "student_OC",
+    "Initialisation": 1,
+    "Pw": "Geof4589",
+    "Database": "projet_5"
 }
