Some modifications: requirements.txt, docstring,...

--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
     "User": "",
-    "Initialisation": 1,
+    "Initialisation": 0,
     "Pw": "",
-    "Database": ""
+    "Database": "",
+    "Command": "cls"
 }
